Bug 504323 - Activities broken with several symptoms in 6.3.90
Summary: Activities broken with several symptoms in 6.3.90
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activities in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 504375 504520 504790 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-16 10:54 UTC by Schlaefer
Modified: 2025-05-26 07:30 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Schlaefer 2025-05-16 10:54:28 UTC
https://invent.kde.org/plasma/kactivitymanagerd/-/commit/fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87#f8deb7d579a1652649beacb0eed26c904e5109a6_57_56

removed public Q_SLOTS from Activities::CurrentActivity which leads to range of symptoms:

- Erratic behavior incl. not being able to switch between activities via shortcut or plasmoid
- Plasmashell and kactivitymanagerd hugging a CPU core at 100% with an existing db at ~/.local/share/kactivitymanagerd/resources/database
- NULL values inserted into the activitymanager DB etc.

Compiling with Activities::CurrentActivity under Q_SLOTS seems to fix all these problems here.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Comment 1 Akseli Lahtinen 2025-05-16 11:39:00 UTC
Can confirm, and moving the public Q_SLOTS fixes the issue.
Comment 2 Bug Janitor Service 2025-05-16 11:39:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/83
Comment 3 Akseli Lahtinen 2025-05-16 11:41:44 UTC
Git commit 709ae6a7d35ed64766ffe1274a671c9e2cb88b17 by Akseli Lahtinen.
Committed on 16/05/2025 at 11:40.
Pushed by akselmo into branch 'master'.

Activities: Move public Q_SLOTS back to above CurrentActivity

This reverts commit fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87 partially.
Moving the Q_SLOTS here caused some plugins get null information from
these methods, and crashing kactivitymanagerd.
FIXED-IN: 6.4

M  +1    -2    src/service/Activities.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/709ae6a7d35ed64766ffe1274a671c9e2cb88b17
Comment 4 Akseli Lahtinen 2025-05-16 11:46:25 UTC
Git commit 9fa2f48b6a156d105b6b97d288aee6a41d29bbd3 by Akseli Lahtinen.
Committed on 16/05/2025 at 11:41.
Pushed by akselmo into branch 'Plasma/6.4'.

Activities: Move public Q_SLOTS back to above CurrentActivity

This reverts commit fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87 partially.
Moving the Q_SLOTS here caused some plugins get null information from
these methods, and crashing kactivitymanagerd.
FIXED-IN: 6.4


(cherry picked from commit 709ae6a7d35ed64766ffe1274a671c9e2cb88b17)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +1    -2    src/service/Activities.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/9fa2f48b6a156d105b6b97d288aee6a41d29bbd3
Comment 5 Antonio Rojas 2025-05-17 04:48:48 UTC
*** Bug 504375 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2025-05-19 14:21:50 UTC
*** Bug 504520 has been marked as a duplicate of this bug. ***
Comment 7 cwo 2025-05-26 07:30:14 UTC
*** Bug 504790 has been marked as a duplicate of this bug. ***