Activities: Move public Q_SLOTS back to above CurrentActivity

This reverts commit fb2c4167c782ef62b7f5f54a2e0d94bf9593ec87 partially.
Moving the Q_SLOTS here caused some plugins get null information from
these methods, and crashing kactivitymanagerd.

BUG: 504323
FIXED-IN: 6.4


(cherry picked from commit 709ae6a7d35ed64766ffe1274a671c9e2cb88b17)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>